--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "font-awesome": ">=4.1.0",
     "foundation-sites": "^6.2.4",
     "jsonwebtoken": "^7.0.0",
+    "libmarkov": "^1.1.3",
     "lodash": "^4.6.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
+    "node-twitter-api": "^1.8.0",
     "passport": "~0.3.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.3",
